fixed form alignment issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -267,3 +267,7 @@ footer > div > p {
 .modal-header {
     background-color: #9d4ee7;
 }
+
+.form-row {
+    margin: 0;
+}
